# pocketsmith-api-spec

./: CHANGELOG.md  README.md  bundle_spec.py  format_spec.py  openapi.json  openapi.yaml  pyproject.toml
spec/: _index.yaml
spec/paths/: _index.yaml  data_feeds_connections.yaml  me.yaml
spec/paths/accounts/: _id_.yaml
spec/paths/accounts/_id_/: transactions.yaml
spec/paths/attachments/: _id_.yaml
spec/paths/categories/: _id_.yaml
spec/paths/categories/_id_/: category_rules.yaml
spec/paths/data_feeds_connections/: _id_.yaml
spec/paths/data_feeds_connections/_id_/: data_feeds_accounts.yaml
spec/paths/institutions/: _id_.yaml
spec/paths/institutions/_id_/: accounts.yaml
spec/paths/transaction_accounts/: _id_.yaml
spec/paths/transaction_accounts/_id_/: transactions.yaml
spec/paths/transactions/: _id_.yaml
spec/paths/transactions/_id_/: attachments.yaml
spec/paths/users/: _id_.yaml
spec/paths/users/_id_/: accounts.yaml  attachments.yaml  budget.yaml  budget_summary.yaml  categories.yaml  category_rules.yaml  data_feeds_connections.yaml  institutions.yaml  transaction_accounts.yaml  transactions.yaml  trend_analysis.yaml
spec/schemas/: Account.yaml  Attachment.yaml  BudgetAnalysis.yaml  BudgetAnalysisPackage.yaml  Category.yaml  CategoryRule.yaml  DataConnection.yaml  DataFeedsAccount.yaml  DataFeedsConnection.yaml  Error.yaml  Form.yaml  Institution.yaml  Period.yaml  Provider.yaml  Scenario.yaml  Transaction.yaml  TransactionAccount.yaml  User.yaml  _index.yaml
tests/: test_bundle_spec.py
(+1 files in other folders)
