[tool.poetry]
name = "pocketsmith-api-spec"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
"ruamel.yaml" = "^0.16.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
